# vision_transformer

./: .gitignore  justfile  pyproject.toml  setup.sh
vit_jax/: checkpoint.py  checkpoint_test.py  inference_time.py  inference_time_test.py  input_pipeline.py  main.py  metric_writers.py  models.py  models_lit.py  models_mixer.py  models_resnet.py  models_test.py  models_vit.py  momentum_clip.py  preprocess.py  preprocess_test.py  test_utils.py  train.py  train_test.py  utils.py
vit_jax/configs/: augreg.py  common.py  inference_time.py  mixer_base16_cifar10.py  models.py  vit.py
