[tool.poetry]
name = "vit_jax"
version = "0.1"
description = ""
authors = ["Daniel Suess <suess.daniel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3,<3.9"
jax = { extras = ["cpu"], version = "^0.3.4"}
absl-py = ">=0.12.0"
chex = "^0.1.4"
clu = "^0.0.3"
einops = "^0.3.0"
flax = "^0.5.0"
flaxformer = { git = "https://github.com/google/flaxformer", branch = "main" }
ml-collections = "^0.1.0"
numpy = "^1.19.5,<1.23.2"
pandas = "^1.1.0"
tensorflow-cpu = "^2.4.0"
tensorflow-datasets = "^4.0.1"
tensorflow-probability = "^0.11.1"
tensorflow-text = "^2.9.0"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
pylint = "^2.15.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-xdist = { version = "^2.5.0", extras = ["psutil"] }
pdbpp = "^0.10.3"

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "arguments-differ",
    "line-too-long",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-arguments",
    "consider-merging-isinstance",
    "consider-using-generator",
    "too-many-statements",
    "no-else-return",
    "unnecessary-lambda-assignment",
    "unnecessary-comprehension"
]

[tool.pytest.ini_options]
testpaths = ["vit_jax"]
filterwarnings = ["ignore:DeprecationWarning"]
markers = []

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
